--- a/Notebooks/loading_raw_csv.ipynb
+++ b/Notebooks/loading_raw_csv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "107dbf3b",
    "metadata": {},
    "outputs": [
@@ -171,238 +171,58 @@
        "      <td>203781.903446</td>\n",
        "      <td>Atlanta-Sandy Springs-Alpharetta</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>884087</th>\n",
-       "      <td>2023-08-31</td>\n",
-       "      <td>438000.0</td>\n",
-       "      <td>450000.0</td>\n",
-       "      <td>313.553299</td>\n",
-       "      <td>322.866706</td>\n",
-       "      <td>185.0</td>\n",
-       "      <td>189.0</td>\n",
-       "      <td>227.0</td>\n",
-       "      <td>132.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>21949.0</td>\n",
-       "      <td>1385.0</td>\n",
-       "      <td>289300.0</td>\n",
-       "      <td>17525.0</td>\n",
-       "      <td>854.0</td>\n",
-       "      <td>37063.0</td>\n",
-       "      <td>37063.0</td>\n",
-       "      <td>13748.0</td>\n",
-       "      <td>438238.668892</td>\n",
-       "      <td>Tampa-St. Petersburg-Clearwater</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>884088</th>\n",
-       "      <td>2023-09-30</td>\n",
-       "      <td>449950.0</td>\n",
-       "      <td>459900.0</td>\n",
-       "      <td>314.024277</td>\n",
-       "      <td>318.285714</td>\n",
-       "      <td>192.0</td>\n",
-       "      <td>189.0</td>\n",
-       "      <td>243.0</td>\n",
-       "      <td>170.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>21949.0</td>\n",
-       "      <td>1385.0</td>\n",
-       "      <td>289300.0</td>\n",
-       "      <td>17525.0</td>\n",
-       "      <td>854.0</td>\n",
-       "      <td>37063.0</td>\n",
-       "      <td>37063.0</td>\n",
-       "      <td>13748.0</td>\n",
-       "      <td>440569.503271</td>\n",
-       "      <td>Tampa-St. Petersburg-Clearwater</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>884089</th>\n",
-       "      <td>2023-10-31</td>\n",
-       "      <td>450000.0</td>\n",
-       "      <td>449450.0</td>\n",
-       "      <td>312.328767</td>\n",
-       "      <td>314.374076</td>\n",
-       "      <td>187.0</td>\n",
-       "      <td>192.0</td>\n",
-       "      <td>264.0</td>\n",
-       "      <td>185.0</td>\n",
-       "      <td>21.5</td>\n",
-       "      <td>...</td>\n",
-       "      <td>21949.0</td>\n",
-       "      <td>1385.0</td>\n",
-       "      <td>289300.0</td>\n",
-       "      <td>17525.0</td>\n",
-       "      <td>854.0</td>\n",
-       "      <td>37063.0</td>\n",
-       "      <td>37063.0</td>\n",
-       "      <td>13748.0</td>\n",
-       "      <td>442965.899354</td>\n",
-       "      <td>Tampa-St. Petersburg-Clearwater</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>884090</th>\n",
-       "      <td>2023-11-30</td>\n",
-       "      <td>470000.0</td>\n",
-       "      <td>425000.0</td>\n",
-       "      <td>312.328767</td>\n",
-       "      <td>315.315315</td>\n",
-       "      <td>175.0</td>\n",
-       "      <td>182.0</td>\n",
-       "      <td>279.0</td>\n",
-       "      <td>213.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>21949.0</td>\n",
-       "      <td>1385.0</td>\n",
-       "      <td>289300.0</td>\n",
-       "      <td>17525.0</td>\n",
-       "      <td>854.0</td>\n",
-       "      <td>37063.0</td>\n",
-       "      <td>37063.0</td>\n",
-       "      <td>13748.0</td>\n",
-       "      <td>444955.530200</td>\n",
-       "      <td>Tampa-St. Petersburg-Clearwater</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>884091</th>\n",
-       "      <td>2023-12-31</td>\n",
-       "      <td>440000.0</td>\n",
-       "      <td>399949.5</td>\n",
-       "      <td>300.469484</td>\n",
-       "      <td>317.925225</td>\n",
-       "      <td>161.0</td>\n",
-       "      <td>160.0</td>\n",
-       "      <td>240.0</td>\n",
-       "      <td>223.0</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>21949.0</td>\n",
-       "      <td>1385.0</td>\n",
-       "      <td>289300.0</td>\n",
-       "      <td>17525.0</td>\n",
-       "      <td>854.0</td>\n",
-       "      <td>37063.0</td>\n",
-       "      <td>37063.0</td>\n",
-       "      <td>13748.0</td>\n",
-       "      <td>446862.962247</td>\n",
-       "      <td>Tampa-St. Petersburg-Clearwater</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>884092 rows × 39 columns</p>\n",
+       "<p>5 rows × 39 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "              date  median_sale_price  median_list_price  median_ppsf  \\\n",
-       "0       2012-03-31            46550.0           217450.0    31.813674   \n",
-       "1       2012-04-30            61870.0           245000.0    40.723982   \n",
-       "2       2012-05-31           125500.0           217450.0    63.913043   \n",
-       "3       2012-06-30           153000.0           189900.0    81.598080   \n",
-       "4       2012-07-31           165500.0           154000.0    81.598080   \n",
-       "...            ...                ...                ...          ...   \n",
-       "884087  2023-08-31           438000.0           450000.0   313.553299   \n",
-       "884088  2023-09-30           449950.0           459900.0   314.024277   \n",
-       "884089  2023-10-31           450000.0           449450.0   312.328767   \n",
-       "884090  2023-11-30           470000.0           425000.0   312.328767   \n",
-       "884091  2023-12-31           440000.0           399949.5   300.469484   \n",
+       "         date  median_sale_price  median_list_price  median_ppsf  \\\n",
+       "0  2012-03-31            46550.0           217450.0    31.813674   \n",
+       "1  2012-04-30            61870.0           245000.0    40.723982   \n",
+       "2  2012-05-31           125500.0           217450.0    63.913043   \n",
+       "3  2012-06-30           153000.0           189900.0    81.598080   \n",
+       "4  2012-07-31           165500.0           154000.0    81.598080   \n",
        "\n",
-       "        median_list_ppsf  homes_sold  pending_sales  new_listings  inventory  \\\n",
-       "0             110.183666        14.0           23.0          44.0       64.0   \n",
-       "1             130.528256        22.0           29.0          56.0       69.0   \n",
-       "2             119.919216        24.0           40.0          63.0       60.0   \n",
-       "3             105.617353        34.0           46.0          50.0       57.0   \n",
-       "4              83.921175        39.0           49.0          42.0       50.0   \n",
-       "...                  ...         ...            ...           ...        ...   \n",
-       "884087        322.866706       185.0          189.0         227.0      132.0   \n",
-       "884088        318.285714       192.0          189.0         243.0      170.0   \n",
-       "884089        314.374076       187.0          192.0         264.0      185.0   \n",
-       "884090        315.315315       175.0          182.0         279.0      213.0   \n",
-       "884091        317.925225       161.0          160.0         240.0      223.0   \n",
+       "   median_list_ppsf  homes_sold  pending_sales  new_listings  inventory  \\\n",
+       "0        110.183666        14.0           23.0          44.0       64.0   \n",
+       "1        130.528256        22.0           29.0          56.0       69.0   \n",
+       "2        119.919216        24.0           40.0          63.0       60.0   \n",
+       "3        105.617353        34.0           46.0          50.0       57.0   \n",
+       "4         83.921175        39.0           49.0          42.0       50.0   \n",
        "\n",
-       "        median_dom  ...  Total Housing Units  Median Rent  Median Home Value  \\\n",
-       "0             59.5  ...               2677.0        710.0           279500.0   \n",
-       "1             89.5  ...               2677.0        710.0           279500.0   \n",
-       "2            144.5  ...               2677.0        710.0           279500.0   \n",
-       "3            126.0  ...               2677.0        710.0           279500.0   \n",
-       "4             80.0  ...               2677.0        710.0           279500.0   \n",
-       "...            ...  ...                  ...          ...                ...   \n",
-       "884087        20.0  ...              21949.0       1385.0           289300.0   \n",
-       "884088        18.0  ...              21949.0       1385.0           289300.0   \n",
-       "884089        21.5  ...              21949.0       1385.0           289300.0   \n",
-       "884090        21.0  ...              21949.0       1385.0           289300.0   \n",
-       "884091        29.0  ...              21949.0       1385.0           289300.0   \n",
+       "   median_dom  ...  Total Housing Units  Median Rent  Median Home Value  \\\n",
+       "0        59.5  ...               2677.0        710.0           279500.0   \n",
+       "1        89.5  ...               2677.0        710.0           279500.0   \n",
+       "2       144.5  ...               2677.0        710.0           279500.0   \n",
+       "3       126.0  ...               2677.0        710.0           279500.0   \n",
+       "4        80.0  ...               2677.0        710.0           279500.0   \n",
        "\n",
-       "       Total Labor Force  Unemployed Population  Total School Age Population  \\\n",
-       "0                 3171.0                  460.0                       5408.0   \n",
-       "1                 3171.0                  460.0                       5408.0   \n",
-       "2                 3171.0                  460.0                       5408.0   \n",
-       "3                 3171.0                  460.0                       5408.0   \n",
-       "4                 3171.0                  460.0                       5408.0   \n",
-       "...                  ...                    ...                          ...   \n",
-       "884087           17525.0                  854.0                      37063.0   \n",
-       "884088           17525.0                  854.0                      37063.0   \n",
-       "884089           17525.0                  854.0                      37063.0   \n",
-       "884090           17525.0                  854.0                      37063.0   \n",
-       "884091           17525.0                  854.0                      37063.0   \n",
+       "  Total Labor Force  Unemployed Population  Total School Age Population  \\\n",
+       "0            3171.0                  460.0                       5408.0   \n",
+       "1            3171.0                  460.0                       5408.0   \n",
+       "2            3171.0                  460.0                       5408.0   \n",
+       "3            3171.0                  460.0                       5408.0   \n",
+       "4            3171.0                  460.0                       5408.0   \n",
        "\n",
-       "        Total School Enrollment  Median Commute Time          price  \\\n",
-       "0                        5408.0               2492.0  200773.999557   \n",
-       "1                        5408.0               2492.0  202421.064584   \n",
-       "2                        5408.0               2492.0  202681.309539   \n",
-       "3                        5408.0               2492.0  202998.603897   \n",
-       "4                        5408.0               2492.0  203781.903446   \n",
-       "...                         ...                  ...            ...   \n",
-       "884087                  37063.0              13748.0  438238.668892   \n",
-       "884088                  37063.0              13748.0  440569.503271   \n",
-       "884089                  37063.0              13748.0  442965.899354   \n",
-       "884090                  37063.0              13748.0  444955.530200   \n",
-       "884091                  37063.0              13748.0  446862.962247   \n",
+       "   Total School Enrollment  Median Commute Time          price  \\\n",
+       "0                   5408.0               2492.0  200773.999557   \n",
+       "1                   5408.0               2492.0  202421.064584   \n",
+       "2                   5408.0               2492.0  202681.309539   \n",
+       "3                   5408.0               2492.0  202998.603897   \n",
+       "4                   5408.0               2492.0  203781.903446   \n",
        "\n",
-       "                               city_full  \n",
-       "0       Atlanta-Sandy Springs-Alpharetta  \n",
-       "1       Atlanta-Sandy Springs-Alpharetta  \n",
-       "2       Atlanta-Sandy Springs-Alpharetta  \n",
-       "3       Atlanta-Sandy Springs-Alpharetta  \n",
-       "4       Atlanta-Sandy Springs-Alpharetta  \n",
-       "...                                  ...  \n",
-       "884087   Tampa-St. Petersburg-Clearwater  \n",
-       "884088   Tampa-St. Petersburg-Clearwater  \n",
-       "884089   Tampa-St. Petersburg-Clearwater  \n",
-       "884090   Tampa-St. Petersburg-Clearwater  \n",
-       "884091   Tampa-St. Petersburg-Clearwater  \n",
+       "                          city_full  \n",
+       "0  Atlanta-Sandy Springs-Alpharetta  \n",
+       "1  Atlanta-Sandy Springs-Alpharetta  \n",
+       "2  Atlanta-Sandy Springs-Alpharetta  \n",
+       "3  Atlanta-Sandy Springs-Alpharetta  \n",
+       "4  Atlanta-Sandy Springs-Alpharetta  \n",
        "\n",
-       "[884092 rows x 39 columns]"
+       "[5 rows x 39 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,34 +231,101 @@
     "import pandas as pd \n",
     "\n",
     "df = pd.read_csv(\"D:/ml-aws/data/raw/HouseTS.csv\")\n",
-    "df\n"
+    "df.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "53151a1f",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(884092, 39)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "date\n",
+      "2013    74712\n",
+      "2014    74712\n",
+      "2015    74712\n",
+      "2016    74712\n",
+      "2017    74712\n",
+      "2018    74712\n",
+      "2019    74712\n",
+      "2020    74712\n",
+      "2021    74712\n",
+      "2022    74712\n",
+      "2023    74712\n",
+      "2012    62260\n",
+      "Name: count, dtype: int64\n"
+     ]
     }
    ],
    "source": [
-    "df.shape"
+    "df['date'] = pd.to_datetime(df['date'])\n",
+    "print(df['date'].dt.year.value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "efdc097a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.sort_values(\"date\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6c6dd369",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train shape: (585244, 39)\n",
+      "Eval shape: (149424, 39)\n",
+      "Holdout shape: (149424, 39)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define cutoff dates\n",
+    "cutoff_date_eval = \"2020-01-01\"   # validation starts\n",
+    "cutoff_date_holdout = \"2022-01-01\"  # holdout starts\n",
+    "# Train: before 2020\n",
+    "train_df = df[df[\"date\"] < cutoff_date_eval]\n",
+    "\n",
+    "# Validation/Eval: 2020–2021\n",
+    "eval_df = df[(df[\"date\"] >= cutoff_date_eval) & (df[\"date\"] < cutoff_date_holdout)]\n",
+    "\n",
+    "# Holdout: 2022–2023\n",
+    "holdout_df = df[df[\"date\"] >= cutoff_date_holdout]\n",
+    "\n",
+    "print(\"Train shape:\", train_df.shape)\n",
+    "print(\"Eval shape:\", eval_df.shape)\n",
+    "print(\"Holdout shape:\", holdout_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ea0f93c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df.to_csv(\"D:/ml-aws/data/raw/train.csv\", index=False)\n",
+    "eval_df.to_csv(\"D:/ml-aws/data/raw/eval.csv\", index=False)\n",
+    "holdout_df.to_csv(\"D:/ml-aws/data/raw/holdout.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efdc097a",
+   "id": "472b7fd9",
    "metadata": {},
    "outputs": [],
    "source": []
